# CodebaseNavigator

./: .gitignore  AST.json  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  ai.py  analyze.py  chatbot.py  vcpkg.json
.cache/clangd/index/: directory_scanner.h.826DE47E8E488787.idx  file_symbol_extractor.h.6C7C452D3691051B.idx  main.c.4FD5D57802E5801C.idx  parser.h.B7C799F4D38BB6DB.idx  sdl3.c.114B69507947A157.idx  symbol_content_extractor.h.4AB54B73C09E9D59.idx  symbol_typedef.h.53798CF4CCA5CC18.idx  treesitter.c.A8FE2D02CA4C25B5.idx
src/: main.c  parser.c  parser.h  treesitter_example.c
src/symbol_extractor/: directory_scanner.c  directory_scanner.h  file_symbol_extractor.c  file_symbol_extractor.h  symbol_content_extractor.c  symbol_content_extractor.h  symbol_typedef.c  symbol_typedef.h
tests/: sdl3.c  treesitter.c
